# atlassian-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  justfile  todo.md
.github/workflows/: ci.yml  release.yml
configs/: config.example.yaml
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  pagination.rs  ratelimit.rs  retry.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/bulk/: Cargo.toml
crates/bulk/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: auth.rs  bamboo.rs  bitbucket.rs  confluence.rs  jsm.rs  mod.rs  opsgenie.rs  product.rs
crates/cli/src/commands/bitbucket/: branches.rs  bulk.rs  commits.rs  mod.rs  permissions.rs  pipelines.rs  pullrequests.rs  repos.rs  utils.rs  webhooks.rs  workspaces.rs
crates/cli/src/commands/confluence/: analytics.rs  attachments.rs  bulk.rs  mod.rs  pages.rs  search.rs  spaces.rs  utils.rs
crates/cli/src/commands/jira/: audit.rs  automation.rs  bulk.rs  fields_workflows.rs  issues.rs  mod.rs  projects.rs  utils.rs  webhooks.rs
crates/cli/src/query/: cql.rs  jql.rs  mod.rs
crates/cli/tests/: bitbucket_integration.rs  cli_integration.rs  confluence_integration.rs  jira_integration.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs
docs/: plan.md  status.md  todo.md  vision.md
docs/examples/bitbucket/: branch-cleanup.sh  pr-automation.sh  repo-audit.sh
docs/examples/confluence/: backup-space.sh  bulk-cleanup.sh  doc-pipeline.sh  space-report.sh
docs/examples/jira/: bulk-transition.sh  project-cleanup.sh  sprint-report.sh
