[package]
name = "atlassian-cli-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "API client library for Atlassian Cloud products"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
tracing.workspace = true
backoff.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
async-stream.workspace = true
