[package]
name = "atlassian-cli-bulk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bulk operations executor for Atlassian CLI"

[dependencies]
tokio.workspace = true
indicatif.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
