[package]
name = "atlassiancli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified CLI for Atlassian Cloud products"

[[bin]]
name = "atlassiancli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

# Internal crates
atlassiancli-api = { path = "../api" }
atlassiancli-auth = { path = "../auth" }
atlassiancli-config = { path = "../config" }
atlassiancli-output = { path = "../output" }
atlassiancli-bulk = { path = "../bulk" }

# CLI helpers
url.workspace = true
csv = "1.4.0"

[dev-dependencies]
wiremock.workspace = true
