[package]
name = "atlassian-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified CLI for Atlassian Cloud products"

[[bin]]
name = "atlassian-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

# Internal crates
atlassian-cli-api = { path = "../api", version = "0.1.7" }
atlassian-cli-auth = { path = "../auth", version = "0.1.7" }
atlassian-cli-config = { path = "../config", version = "0.1.7" }
atlassian-cli-output = { path = "../output", version = "0.1.7" }
atlassian-cli-bulk = { path = "../bulk", version = "0.1.7" }

# CLI helpers
url.workspace = true
csv = "1.4.0"
urlencoding = "2.1.3"
reqwest = { workspace = true, features = ["multipart"] }
chrono.workspace = true
rpassword = "7"

[dev-dependencies]
wiremock.workspace = true

[package.metadata.dist]
# Homebrew tap repository (format: owner/repo)
tap = "omar16100/homebrew-atlassian-cli"
# Formula name (optional, defaults to package name)
formula = "atlassian-cli"
