[package]
name = "atlassian-cli-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.13"
