[package]
name = "atlassian-cli-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Output formatting library for Atlassian CLI"

[dependencies]
tabled.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
